--- a/src-ui/angular.json
+++ b/src-ui/angular.json
@@ -30,7 +30,8 @@
 					"pt-PT": "src/locale/messages.pt_PT.xlf",
 					"ro-RO": "src/locale/messages.ro_RO.xlf",
 					"ru-RU": "src/locale/messages.ru_RU.xlf",
-					"sv-SE": "src/locale/messages.sv_SE.xlf"
+					"sv-SE": "src/locale/messages.sv_SE.xlf",
+					"zh-CN": "src/locale/messages.zh_CN.xlf"
         }
 			},
 			"architect": {
